sso/sso-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sso
spec:
  finalizers:
  - kubernetes
