sso/sso-app-ping-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The JGroups ping port for clustering.
  labels:
    application: sso
    rhsso: 7.5.3.GA
  name: sso-ping
  namespace: sso
spec:
  clusterIP: None
  ports:
  - name: ping
    port: 8888
  publishNotReadyAddresses: true
  selector:
    deploymentConfig: sso
