sso/sso-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-postgresql
  namespace: sso
spec:
  type: ClusterIP
  ports:
  - name: sso-postgresql
    port: 5432
  selector:
    name: sso-postgresql
